fix spacing in title
margin - 0px

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ h1 {font-family: 'Oswald', sans-serif, bold;
 	font-size: 300%;
 	color: #525452;
 	margin-left: 30px;
-
+margin-bottom: 0px;
 	float: block;
 	 z-index: -1;}
 	
@@ -76,7 +76,7 @@ nav {text-align: center;}
 #pages-nav li {display:inline-block;
 				font-family: 'Oswald', sans-serif, bold;
 				font-size: 1em;
-				padding: 5px;
+				padding: 0px;
 			 	
 			 	border-color: #525452; 
 			 	background-color:none; 
